--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -3,5 +3,8 @@ version: "3.8"
 services:
   website:
     image: pietrum/official-website:${TAG:-latest}
-    ports:
-      - ${PORT_PUBLISHED:-80}:${PORT:-8080}
+
+networks:
+  default:
+    external: true
+    name: hxh
